# Production-Ready-Financial-RAG-System-with-CI-CD

./: .gitignore  README.md  main.py  pyproject.toml
Backend/: requirements.txt
Backend/Data Extraction/: data_parser.ipynb
Backend/Data Extraction/output/doc_addbc6a7f1dd/: blocks.json  docling.json  document.md  document_metadata.json
Backend/Data Extraction/output/doc_addbc6a7f1dd/tables/: doc_addbc6a7f1dd_table_000001.csv  doc_addbc6a7f1dd_table_000002.csv
