[project]
name = "production-ready-financial-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.110.0",
    "ipykernel>=7.3.0",
    "liteparse>=2.5.1",
    "markitdown>=0.1.6",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "tabulate>=0.10.0",
]
